--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.watch.js", "jquery.musepolyfill.bgsize.js", "portfolio.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "portfolio.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -11,8 +11,8 @@
   <title>PORTFOLIO</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?115342351"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?92232942"/>
-  <link rel="stylesheet" type="text/css" href="css/portfolio.css?4090267741" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?214089163"/>
+  <link rel="stylesheet" type="text/css" href="css/portfolio.css?456441285" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -334,7 +334,7 @@ background-color:#222222}
      <div class="clearfix grpelem" id="ppu4273-4"><!-- column -->
       <div class="clearfix colelem" id="pu4273-4"><!-- group -->
        <img class="grpelem" id="u4273-4" alt="" width="34" height="148" src="images/u4273-4.png"/><!-- rasterized frame -->
-       <div class="pointer_cursor Black clearfix grpelem" id="u3222-5" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="47" data-mu-ie-matrix-dy="-47"><!-- content -->
+       <div class="pointer_cursor rounded-corners Black clearfix grpelem" id="u3222-5" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="47" data-mu-ie-matrix-dy="-47"><!-- content -->
         <a class="block" href="assets/milena_kiseleva.vcf"></a>
         <p id="u3222-3"><a class="nonblock" href="assets/milena_kiseleva.vcf"><span id="u3222">Download vCard</span></a></p>
        </div>
@@ -442,12 +442,10 @@ background-color:#222222}
 </div>
      <div class="grpelem" id="u3104"><!-- simple frame --></div>
     </div>
-    <div class="clearfix colelem" id="pu3844-6"><!-- group -->
-     <div class="clearfix grpelem" id="u3844-6"><!-- content -->
-      <p id="u3844-2">——————————————&nbsp;&nbsp; Icons&nbsp;&nbsp; ——————————————</p>
-      <p id="u3844-3">&nbsp;</p>
-      <p id="u3844-4">&nbsp;</p>
-     </div>
+    <div class="clearfix colelem" id="u3844-4"><!-- content -->
+     <p>——————————————&nbsp;&nbsp; Icons&nbsp;&nbsp; ——————————————</p>
+    </div>
+    <div class="clearfix colelem" id="pu3847"><!-- group -->
      <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u3847" href="https://www.iconfinder.com/iconsets/liner-multimedia-buttons" target="_blank"><!-- group --><div class="clearfix grpelem" id="u4558-4"><!-- content --><p id="u4558-2">Liner Multimedia Buttons</p></div></a>
      <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u3850" href="https://www.iconfinder.com/iconsets/different-genders" target="_blank"><!-- group --><div class="clearfix grpelem" id="u4561-4"><!-- content --><p id="u4561-2">Different genders</p></div></a>
      <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u3853" href="https://www.iconfinder.com/iconsets/weather-liner" target="_blank"><!-- group --><div class="clearfix grpelem" id="u4564-4"><!-- content --><p id="u4564-2">Weather liner</p></div></a>
@@ -460,28 +458,35 @@ background-color:#222222}
       <a class="nonblock nontext clearfix grpelem" id="u5026-4" href="https://www.iconfinder.com/iconsets/ice-cream-3" target="_blank"><!-- content --><p id="u5026-2">Ice Cream</p></a>
      </div>
     </div>
-    <div class="clearfix colelem" id="pu4874-6"><!-- group -->
-     <div class="clearfix grpelem" id="u4874-6"><!-- content -->
-      <p id="u4874-2">—————————————&nbsp;&nbsp; Cliparts&nbsp; ——————————————</p>
-      <p id="u4874-3">&nbsp;</p>
-      <p id="u4874-4">&nbsp;</p>
+    <div class="clearfix colelem" id="u5168-4"><!-- content -->
+     <p>————————————&nbsp; Illustrations&nbsp; —————————————</p>
+    </div>
+    <div class="clearfix colelem" id="pu5167"><!-- group -->
+     <div class="shadow museBGSize clearfix grpelem" id="u5167"><!-- group -->
+      <div class="clearfix grpelem" id="u5169-4"><!-- content -->
+       <p id="u5169-2">Clown</p>
+      </div>
      </div>
-     <div class="shadow museBGSize clearfix grpelem" id="u4879"><!-- group -->
-      <div class="clearfix grpelem" id="u4883-4"><!-- content -->
-       <p id="u4883-2">Easter Egg's</p>
+     <div class="shadow museBGSize clearfix grpelem" id="u5170"><!-- group -->
+      <div class="clearfix grpelem" id="u5171-4"><!-- content -->
+       <p id="u5171-2">Lion Face</p>
+      </div>
+     </div>
+     <div class="shadow museBGSize clearfix grpelem" id="u5172"><!-- group -->
+      <div class="clearfix grpelem" id="u5173-4"><!-- content -->
+       <p id="u5173-2">Ice Cream</p>
       </div>
      </div>
     </div>
-    <div class="clearfix colelem" id="pu4276-6"><!-- group -->
-     <div class="clearfix grpelem" id="u4276-6"><!-- content -->
-      <p id="u4276-2">——————————————&nbsp;&nbsp; Logos&nbsp;&nbsp; ——————————————</p>
-      <p id="u4276-3">&nbsp;</p>
-      <p id="u4276-4">&nbsp;</p>
-     </div>
-     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u4277" href="https://wordpress.org/plugins/rss-feed-icon-for-specificfeedscom/" target="_blank" title="Open page in new tab"><!-- group --><div class="clearfix grpelem" id="u4570-4"><!-- content --><p id="u4570-2">Icon for WordPress Plugin</p></div></a>
-     <div class="clearfix grpelem" id="u4278-4"><!-- content -->
-      <p>WP Plugin &quot;RSS Feed Icon for SpecificFeeds.com&quot;</p>
-     </div>
+    <div class="clearfix colelem" id="u4276-4"><!-- content -->
+     <p>——————————————&nbsp;&nbsp; Logos&nbsp;&nbsp; ——————————————</p>
+    </div>
+    <a class="nonblock nontext shadow museBGSize clearfix colelem" id="u4277" href="https://wordpress.org/plugins/rss-feed-icon-for-specificfeedscom/" target="_blank" title="Open page in new tab"><!-- group --><div class="clearfix grpelem" id="u4570-4"><!-- content --><p id="u4570-2">Icon for WordPress Plugin</p></div></a>
+    <div class="clearfix colelem" id="u4278-4"><!-- content -->
+     <p>WP Plugin &quot;RSS Feed Icon for SpecificFeeds.com&quot;</p>
+    </div>
+    <div class="clearfix colelem" id="u5106-3"><!-- content -->
+     <p>&nbsp;</p>
     </div>
     <div class="verticalspacer"></div>
     <div class="clearfix colelem" id="pu3093"><!-- group -->
