--- a/portfolio.html
+++ b/portfolio.html
@@ -511,7 +511,7 @@ background-color:#222222}
    <div class="verticalspacer" data-offset-top="2676" data-content-above-spacer="2669" data-content-below-spacer="78"></div>
    <div class="clearfix grpelem" id="u3093"><!-- column -->
     <div class="clearfix colelem" id="u3252-4"><!-- content -->
-     <p>© 2016 - 2019&nbsp; ·&nbsp; Milena Kiseleva. All rights reserved.</p>
+     <p>© 2016-2020 · Milena Kiseleva. All rights reserved.</p>
     </div>
     <a class="nonblock nontext clearfix colelem" id="u5246-4" href="privacy-policy.html"><!-- content --><p>Privacy Policy</p></a>
    </div>
